Updated HTML and CSS for CoffeeTime Project Layout

--- a/coffeeTime/coffeeTime.html
+++ b/coffeeTime/coffeeTime.html
@@ -41,8 +41,8 @@
 		 <p id="ptext">At Coffee Time, we're on a mission to redefine your coffee moments. Our carefully curated selection of premium beans,sourced from the world's most renowned coffee regions.<br/>
 		 With expert craftmanship and a committment to quality,
 		 Join us in savoring the art of coffee, one cup at a time.</p>
-		 <details id="ptext">
-		   <summary id="summary">Read More</summary>
+		 <details id="ptext-1">
+		   <summary id="summary">Read More</summary><br/>
 		   At Coffee Time, we're on a mission to redefine your coffee moments. Our carefully curated selection of premium beans,sourced from the world's most renowned coffee regions. With expert craftmanship and a committment to quality,Join us in savoring the art of coffee, one cup at a time. At Coffee Borcelle, we're on a mission to redefine your coffee moments. Our carefully curated selection of premium beans,sourced from the world's most renowned coffee regions. With expert craftmanship and a committment to quality,Join us in savoring the art of coffee, one cup at a time.
 		 </details>
 	   </div>  
